--- a/dataset/Dockerfile
+++ b/dataset/Dockerfile
@@ -1,3 +1,7 @@
+# This Dockerfile installs distro's openvswitch package.
+# The start-ovs-with-dataset.sh starts OVS kernel datapath
+# and load the NSX configurations and OpenFlow rule set.
+
 # HOWTO:
 # docker build . 
 # docker run --privileged -it 654d284db02b /bin/bash
@@ -6,33 +10,13 @@
 # Use Ubuntu 21.04 which has kernel support for AF_XDP
 FROM ubuntu:21.04
 
-ARG OVS_VERSION=v2.15.0
-ADD https://github.com/openvswitch/ovs/archive/${OVS_VERSION}.tar.gz /src/
 
 WORKDIR /src
-RUN mkdir -p /src/ovs
-RUN tar --strip-components=1 -C ovs -xvf ${OVS_VERSION}.tar.gz
-
-WORKDIR /src/ovs
-
-ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get update && apt-get -y install autoconf automake libtool libcap-ng-dev libssl-dev \
-    python3-pip python3-openssl libelf-dev python3-setuptools python3-wheel python3-sphinx libnuma-dev
 
 # libbpf is required when using OVS with AF_XDP
-RUN apt-get -y install libbpf-dev
-
-RUN ./boot.sh
-RUN ./configure --enable-afxdp
-
-# Build OVS with AF_XDP support
-RUN make -j2 && make install
-
+RUN apt-get update
+RUN apt-get -y install openvswitch-common openvswitch-switch
 RUN apt-get -y install iproute2
-
-# Setup OVSDB
-RUN mkdir -p /usr/local/etc/openvswitch/ && mkdir -p /usr/local/var/run/openvswitch/ && \
-    mkdir -p /usr/local/var/log/openvswitch/
 
 # Start OVS
 ADD . /src/
