--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,5 +39,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: user/app:latest
+          tags: u9012063/ovs-afxdp:latest
       
